--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "maatwebsite/excel": "^3.1",
         "milon/barcode": "^6.0",
         "rawilk/laravel-printing": "^1.3",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-permission": "^3.17",
         "srmklive/paypal": "^3.0",
         "stripe/stripe-php": "^7.57",
